Completed hero section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="btnmd:flex justify-center items-center bg-primary-color font-extrabold hover:bg-secondary-color py-3 px-5 rounded-full cursor-pointer">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white ml-2 p-2 rounded-full"></i></a>
                     </div>
                   <!-- Dropdown -->
-                  <div class="dropdown border border-5 border-red-600 relative">
+                  <div class="dropdown relative">
                     <div tabindex="0" role="button" class="btn btn-ghost md:hidden">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -74,6 +74,19 @@
                 </div>
               </div>
         </nav>
+        <!-- Hero section -->
+         <section>
+            <div class="hero min-h-screen">
+                <div class="hero-content text-center">
+                  <div class="max-w-2xl mx-auto">
+                    <img class="mx-auto" src="assets/banner.png" alt="">
+                    <h1 class="text-4xl md:text-5xl font-bold pt-7">A barn house of this design has a striking appearance</h1>
+                    <p class="py-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    <button class="btn bg-secondary-color hover:bg-primary-color py-3 px-5 rounded-full cursor-pointer flex flex-col items-center justify-center text-center w-full md:w-auto mx-auto"><a class="text-lg font-extrabold">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white ml-2 p-2 rounded-full"></i></a></button>
+                  </div>
+                </div>
+              </div>
+         </section>
      </header>
 
 <!-- Customization -->
