Completed about us section

--- a/index.html
+++ b/index.html
@@ -82,13 +82,56 @@
                     <img class="mx-auto" src="assets/banner.png" alt="">
                     <h1 class="text-4xl md:text-5xl font-bold pt-7">A barn house of this design has a striking appearance</h1>
                     <p class="py-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-                    <button class="btn bg-secondary-color hover:bg-primary-color py-3 px-5 rounded-full cursor-pointer flex flex-col items-center justify-center text-center w-full md:w-auto mx-auto"><a class="text-lg font-extrabold">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white ml-2 p-2 rounded-full"></i></a></button>
+                    <button class="btn bg-secondary-color hover:bg-primary-color py-3 px-5 rounded-full cursor-pointer flex flex-col items-center justify-center text-center w-full md:w-auto mx-auto border border-primary-color"><a class="text-lg font-extrabold">Book Consult <i class="fa-solid fa-arrow-right bg-primary-color text-black ml-2 p-2 rounded-full"></i></a></button>
                   </div>
                 </div>
               </div>
          </section>
      </header>
-
+<main>
+    <!-- About us section -->
+     <section class="bg-dark-2 p-7">
+        <div class="md:container mx-auto grid grid-cols-1 justify-center items-center md:grid-cols-2 gap-5 relative md:pt-12">
+            <img class="absolute w-20 top-0 -left-5 hidden md:block" src="assets/Vector.png" alt="">
+        <div class="">
+            <div class="text-center md:text-start">
+            <p class="text-sm inline-block mx-auto bg-white py-3 px-5 rounded-full mb-4 font-bold"><i class="fa-solid fa-arrow-right"></i> About Us</p>
+            <h1 class="text-4xl font-extrabold">We design thoughtful, liveable spaces</h1>
+            <p class="my-4">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="grid grid-cols-1 justify-center items-center md:grid-cols-2 gap-6">
+                <!-- About card 1 -->
+                 <div class="flex bg-white p-5 rounded-lg gap-5">
+                    <!-- Card left -->
+                     <div>
+                        <img class="w-2/3 md:w-full" src="assets/commercial.png" alt="">
+                     </div>
+                      <!-- Card right -->
+                       <div>
+                        <h3 class="font-bold text-lg">Commercial</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                       </div>
+                 </div>
+                <!-- About card 2 -->
+                 <div class="flex bg-white p-5 rounded-lg gap-5">
+                    <!-- Card left -->
+                     <div>
+                        <img class="w-2/3 md:w-full" src="assets/residential.png" alt="">
+                     </div>
+                      <!-- Card right -->
+                       <div>
+                        <h3 class="font-bold text-lg">Residential</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                       </div>
+                 </div>
+            </div>
+        </div>
+            <div class="text-center mt-4 aspect-video">
+                <img class="w-full mx-auto h-full rounded-xl object-cover" src="assets/Rectangle.png" alt="About us image">
+            </div>
+        </div>
+     </section>
+</main>
 <!-- Customization -->
 <script>
     tailwind.config = {
