Added How it works section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,43 @@
                 <img class="w-full mx-auto h-full rounded-xl object-cover" src="assets/Rectangle.png" alt="About us image">
             </div>
         </div>
+
+        <section class="my-10">
+            <!-- How we works -->
+             <div class="text-center">
+                <p class="text-sm inline-block mx-auto bg-white py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> How we works</p>
+                <h1 class="text-4xl font-extrabold my-4">Our Works Process</h1>
+                <p class="max-w-2xl mx-auto text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+             </div>
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center md:justify-between items-center gap-3 mt-5">
+                <!-- Card 1 -->
+                 <div class="bg-red-200 p-5 rounded-xl">
+                    <img class="w-9" src="assets/concept.png" alt="">
+                    <h3 class="text-lg font-bold my-3">Concept</h3>
+                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                 <!-- Card 2 -->
+                 <div class="bg-amber-200 p-5 rounded-xl">
+                    <img class="w-9" src="assets/flow-chart.png" alt="">
+                    <h3 class="text-lg font-bold my-3">Design Process</h3>
+                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                 <!-- Card 3 -->
+                 <div class="bg-emerald-200 p-5 rounded-xl">
+                    <img class="w-9" src="assets/vision.png" alt="">
+                    <h3 class="text-lg font-bold my-3">Supervision</h3>
+                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                 <!-- Card 4 -->
+                 <div class="bg-cyan-200 p-5 rounded-xl">
+                    <img class="w-9" src="assets/budget-planning.png" alt="">
+                    <h3 class="text-lg font-bold my-3">Budget Planning</h3>
+                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+             </div>
+        </section>
      </section>
+
 </main>
 <!-- Customization -->
 <script>
