completed Our Latest Portfolio section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,50 @@
         </section>
      </section>
 
+     <section class="bg-dark-2 p-7">
+        <div class="text-center">
+            <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> Explore our Latest works</p>
+            <h1 class="font-extrabold text-4xl my-4">Our Latest Portfolio</h1>
+            <p class="text-sm text-dark-1 md:max-w-xl md:mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-center items-center md:justify-between gap-4 mt-6">
+            <!-- 1 -->
+            <div class="flex flex-col md:flex-row justify-center md:justify-between items-center lg:col-span-3 md:col-span-2 border border-gray-300 p-3 rounded-xl gap-4">
+                <div class="">
+                    <img class="w-full" src="assets/img1.png" alt="Commercial image">
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold">Commercial</h3>
+                    <p class="text-sm text-dark-1 my-3 max-w-lg">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                    <a href="#" class="font-bold">View details <i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full"></i></a>
+                </div>
+            </div>
+            <!-- 2 -->
+             <div class="rounded-2xl border border-gray-300 w-full lg:h-full flex justify-center items-center">
+                <img class="m-auto p-3 w-full lg:w-56 lg:h-44" src="assets/img2.png" alt="">
+             </div>
+             <!-- 3 -->
+             <div class="rounded-2xl border border-gray-300 w-full lg:h-full flex justify-center items-center md:py-0">
+                <img class="m-auto w-full lg:w-56 lg:h-44 p-3" src="assets/img3.png" alt="">
+             </div>
+             <!-- 4 -->
+             <div class="flex flex-col md:flex-row justify-center md:justify-between items-center md:col-span-2 border border-gray-300 p-3 rounded-xl gap-4">
+                <div class="w-full lg:w-auto">
+                    <img class="w-full" src="assets/img4.png" alt="Commercial image">
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold">Commercial</h3>
+                    <p class="text-sm text-dark-1 my-3 max-w-lg">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                    <a href="#" class="font-bold">View details <i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full"></i></a>
+                </div>
+            </div>
+            <!-- 5 -->
+            <div class="rounded-2xl border border-gray-300 w-full lg:h-full flex justify-center items-center md:py-0">
+                <img class="m-auto w-full lg:w-56 lg:h-44 p-3" src="assets/img5.png" alt="">
+             </div>
+        </div>
+     </section>
+
 </main>
 <!-- Customization -->
 <script>
