Added footer section

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
      <section class="bg-message-bg bg-cover w-full h-auto">
         <div  class="md:container md:mx-auto py-9">
             <div class="text-center">
-                <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> About Us</p>
+                <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> Let’s Connect</p>
                 <h1 class="text-4xl font-extrabold my-4">Let’s Discuss Next Project</h1>
                 <p class="text-sm max-w-xl mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
@@ -240,6 +240,24 @@
      </section>
 
 </main>
+<footer class="bg-slate-950">
+    <div class="container mx-auto py-10">
+        <div class="text-center">
+            <a class="text-xl font-extrabold cursor-pointer text-white"><i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full text-black"></i> Rinterio</a>
+            <p class="text-sm max-w-xl mx-auto text-gray-300 mt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <ul class="flex flex-col md:flex-row gap-4 justify-center items-center md:gap-11 my-5 text-gray-300">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Portfilio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+        <div class="text-center">
+            <a class="text-sm inline-block mx-auto bg-primary-color hover:bg-secondary-color w-full md:w-auto text-center py-3 px-5 rounded-full font-extrabold cursor-pointer">Book Consult <i class="fa-solid fa-arrow-right bg-black p-2 text-white ml-2 rounded-full"></i></a>
+        </div>
+    </div>
+</footer>
 <!-- Customization -->
 <script>
     tailwind.config = {
