Completed client review section (Unique)

--- a/index.html
+++ b/index.html
@@ -211,8 +211,93 @@
         </div>
      </section>
 
+     <!-- Review section -->
+      <section class="md:container md:mx-auto my-10">
+        <div>
+            <h1 class="text-4xl text-center md:text-start">See what others said<br><span class="font-extrabold">about us</span></h1>
+        </div>
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <!-- Card 1 -->
+              <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                <figure class="">
+                  <img class="w-96"
+                    src="assets/review/jonathon.webp"
+                    alt="Movie" />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">Jonathon Devis</h2>
+                  <p>Client</p>
+                  <p class="max-w-md">Great service and well-maintained properties! The staff was responsive, and the rental process was smooth and straightforward. Highly recommend!</p>
+                </div>
+              </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide4" class="btn btn-circle opacity-40 md:opacity-100">❮</a>
+                <a href="#slide2" class="btn btn-circle opacity-40 md:opacity-100">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <!-- Card 2 -->
+              <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                <figure class="">
+                  <img class="w-96"
+                    src="assets/review/Michele.jpg"
+                    alt="Client" />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">Michele</h2>
+                  <p>Client</p>
+                  <p class="max-w-md">"Excellent service! The rental house was clean, well-maintained, and exactly as advertised. The staff was responsive and helpful. Highly recommend!"</p>
+                </div>
+              </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle opacity-40 md:opacity-100">❮</a>
+                <a href="#slide3" class="btn btn-circle opacity-40 md:opacity-100">❯</a>
+              </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+                <!-- Card 3 -->
+                <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                    <figure class="">
+                      <img class="w-96"
+                        src="assets/review/albert.webp"
+                        alt="Albert" />
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Albert</h2>
+                      <p>Client</p>
+                      <p class="max-w-md">"Great experience! The house was in a perfect location, beautifully furnished, and the booking process was seamless. Customer service was top-notch!"</p>
+                    </div>
+                  </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle opacity-40 md:opacity-100">❮</a>
+                <a href="#slide4" class="btn btn-circle opacity-40 md:opacity-100">❯</a>
+              </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+                <!-- Card 4 -->
+                <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                    <figure class="">
+                      <img class="w-96"
+                        src="assets/review/elizabeth.webp"
+                        alt="Elizabeth" />
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Elizabeth</h2>
+                      <p>Client</p>
+                      <p class="max-w-md">"Impressed with the quality of the rental property and the company's professionalism. Smooth check-in process, and the house was spotless. Will rent again!"</p>
+                    </div>
+                  </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle opacity-40 md:opacity-100">❮</a>
+                <a href="#slide1" class="btn btn-circle opacity-40 md:opacity-100">❯</a>
+              </div>
+            </div>
+          </div>
+      </section>
+
      <section class="bg-message-bg bg-cover w-full h-auto">
-        <div  class="md:container md:mx-auto py-9">
+        <div class="container mx-auto py-9">
             <div class="text-center">
                 <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> Let’s Connect</p>
                 <h1 class="text-4xl font-extrabold my-4">Let’s Discuss Next Project</h1>
@@ -247,11 +332,11 @@
             <p class="text-sm max-w-xl mx-auto text-gray-300 mt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
         <ul class="flex flex-col md:flex-row gap-4 justify-center items-center md:gap-11 my-5 text-gray-300">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Portfilio</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a class="hover:text-primary-color" href="#">Home</a></li>
+            <li><a class="hover:text-primary-color" href="#">Service</a></li>
+            <li><a class="hover:text-primary-color" href="#">Portfilio</a></li>
+            <li><a class="hover:text-primary-color" href="#">Blog</a></li>
+            <li><a class="hover:text-primary-color" href="#">Contact Us</a></li>
         </ul>
         <div class="text-center">
             <a class="text-sm inline-block mx-auto bg-primary-color hover:bg-secondary-color w-full md:w-auto text-center py-3 px-5 rounded-full font-extrabold cursor-pointer">Book Consult <i class="fa-solid fa-arrow-right bg-black p-2 text-white ml-2 rounded-full"></i></a>
