Fixed some issues and removed dummy text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <div class="max-w-2xl mx-auto">
                     <img class="mx-auto" src="assets/banner.png" alt="">
                     <h1 class="text-4xl md:text-5xl font-bold pt-7">A barn house of this design has a striking appearance</h1>
-                    <p class="py-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    <p class="py-8">Discover exceptional properties designed for modern living and business success. Explore our portfolio and let’s create your next vision together.</p>
                     <button class="btn bg-secondary-color hover:bg-primary-color py-3 px-5 rounded-full cursor-pointer flex flex-col items-center justify-center text-center w-full md:w-auto mx-auto border border-primary-color"><a class="text-lg font-extrabold">Book Consult <i class="fa-solid fa-arrow-right bg-primary-color text-black ml-2 p-2 rounded-full"></i></a></button>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
             <div class="text-center md:text-start">
             <p class="text-sm inline-block mx-auto bg-white py-3 px-5 rounded-full mb-4 font-bold"><i class="fa-solid fa-arrow-right"></i> About Us</p>
             <h1 class="text-4xl font-extrabold">We design thoughtful, liveable spaces</h1>
-            <p class="my-4">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="my-4">We are a dedicated company offering high-quality homes with exceptional service. Our goal is to provide comfort and convenience to our clients.</p>
             </div>
             <div class="grid grid-cols-1 justify-center items-center md:grid-cols-2 gap-6">
                 <!-- About card 1 -->
@@ -109,7 +109,7 @@
                       <!-- Card right -->
                        <div>
                         <h3 class="font-bold text-lg">Commercial</h3>
-                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-sm">Prime locations, modern amenities, and flexible spaces designed to support your business growth and success.</p>
                        </div>
                  </div>
                 <!-- About card 2 -->
@@ -121,7 +121,7 @@
                       <!-- Card right -->
                        <div>
                         <h3 class="font-bold text-lg">Residential</h3>
-                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-sm">Comfortable, stylish living spaces designed to feel like home, with all the modern conveniences you need.</p>
                        </div>
                  </div>
             </div>
@@ -136,32 +136,32 @@
              <div class="text-center">
                 <p class="text-sm inline-block mx-auto bg-white py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> How we works</p>
                 <h1 class="text-4xl font-extrabold my-4">Our Works Process</h1>
-                <p class="max-w-2xl mx-auto text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="max-w-2xl mx-auto text-sm">We work with transparency and efficiency, ensuring a seamless process from property selection to move-in, with customer satisfaction as our priority.</p>
              </div>
              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center md:justify-between items-center gap-3 mt-5">
                 <!-- Card 1 -->
                  <div class="bg-red-200 p-5 rounded-xl">
                     <img class="w-9" src="assets/concept.png" alt="">
                     <h3 class="text-lg font-bold my-3">Concept</h3>
-                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-sm text-gray-700">Our concepts blend innovation, quality, and customer focus in every property.</p>
                  </div>
                  <!-- Card 2 -->
                  <div class="bg-amber-200 p-5 rounded-xl">
                     <img class="w-9" src="assets/flow-chart.png" alt="">
                     <h3 class="text-lg font-bold my-3">Design Process</h3>
-                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-sm text-gray-700">Our design process emphasizes creativity, functionality, and attention to detail.</p>
                  </div>
                  <!-- Card 3 -->
                  <div class="bg-emerald-200 p-5 rounded-xl">
                     <img class="w-9" src="assets/vision.png" alt="">
                     <h3 class="text-lg font-bold my-3">Supervision</h3>
-                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-sm text-gray-700">ensures quality, timely completion, and adherence to standards.</p>
                  </div>
                  <!-- Card 4 -->
                  <div class="bg-cyan-200 p-5 rounded-xl">
                     <img class="w-9" src="assets/budget-planning.png" alt="">
                     <h3 class="text-lg font-bold my-3">Budget Planning</h3>
-                    <p class="text-sm text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-sm text-gray-700">Strategic planning balances cost control with maximizing value and efficiency.</p>
                  </div>
              </div>
         </section>
@@ -171,7 +171,7 @@
         <div class="text-center">
             <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> Explore our Latest works</p>
             <h1 class="font-extrabold text-4xl my-4">Our Latest Portfolio</h1>
-            <p class="text-sm text-dark-1 md:max-w-xl md:mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-sm text-dark-1 md:max-w-xl md:mx-auto">Our latest portfolio showcases cutting-edge designs and exceptional properties tailored to modern living and business needs.</p>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-center items-center md:justify-between gap-4 mt-6">
             <!-- 1 -->
@@ -181,7 +181,7 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold">Commercial</h3>
-                    <p class="text-sm text-dark-1 my-3 max-w-lg">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                    <p class="text-sm text-dark-1 my-3 max-w-lg">Our latest commercial portfolio features prime locations and innovative spaces designed to elevate business operations and growth.</p>
                     <a href="#" class="font-bold">View details <i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full"></i></a>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold">Commercial</h3>
-                    <p class="text-sm text-dark-1 my-3 max-w-lg">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                    <p class="text-sm text-dark-1 my-3 max-w-lg">Our latest commercial portfolio features innovative spaces designed for dynamic business growth and prime operational efficiency.</p>
                     <a href="#" class="font-bold">View details <i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full"></i></a>
                 </div>
             </div>
@@ -219,7 +219,7 @@
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
               <!-- Card 1 -->
-              <div class="card card-side bg-base-100 shadow-xl mx-auto">
+              <div class="card card-side bg-base-100 shadow-xl mx-auto max-w-full">
                 <figure class="">
                   <img class="w-96"
                     src="assets/review/jonathon.webp"
@@ -238,7 +238,7 @@
             </div>
             <div id="slide2" class="carousel-item relative w-full">
               <!-- Card 2 -->
-              <div class="card card-side bg-base-100 shadow-xl mx-auto">
+              <div class="card card-side bg-base-100 shadow-xl mx-auto max-w-full">
                 <figure class="">
                   <img class="w-96"
                     src="assets/review/Michele.jpg"
@@ -257,7 +257,7 @@
             </div>
             <div id="slide3" class="carousel-item relative w-full">
                 <!-- Card 3 -->
-                <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl mx-auto max-w-full">
                     <figure class="">
                       <img class="w-96"
                         src="assets/review/albert.webp"
@@ -276,7 +276,7 @@
             </div>
             <div id="slide4" class="carousel-item relative w-full">
                 <!-- Card 4 -->
-                <div class="card card-side bg-base-100 shadow-xl mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl mx-auto max-w-full">
                     <figure class="">
                       <img class="w-96"
                         src="assets/review/elizabeth.webp"
@@ -297,11 +297,11 @@
       </section>
 
      <section class="bg-message-bg bg-cover w-full h-auto">
-        <div class="container mx-auto py-9">
+        <div class="container mx-auto p-9 md:px-0 md:py-10">
             <div class="text-center">
                 <p class="text-sm inline-block mx-auto bg-secondary-color py-3 px-5 rounded-full font-bold"><i class="fa-solid fa-arrow-right"></i> Let’s Connect</p>
                 <h1 class="text-4xl font-extrabold my-4">Let’s Discuss Next Project</h1>
-                <p class="text-sm max-w-xl mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-sm max-w-xl mx-auto">Our latest commercial portfolio features innovative spaces designed for dynamic business growth and prime operational efficiency. Let's discuss your next project!</p>
             </div>
             <div class="container mx-auto mt-5">
                 <form action="#" class="w-full mx-auto grid grid-cols-1 gap-5">
@@ -329,7 +329,7 @@
     <div class="container mx-auto py-10">
         <div class="text-center">
             <a class="text-xl font-extrabold cursor-pointer text-white"><i class="fa-solid fa-arrow-right bg-primary-color p-2 rounded-full text-black"></i> Rinterio</a>
-            <p class="text-sm max-w-xl mx-auto text-gray-300 mt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-sm max-w-xl mx-auto text-gray-300 mt-4">We are committed to delivering exceptional properties with innovative designs and unparalleled service, ensuring a seamless experience for every client.</p>
         </div>
         <ul class="flex flex-col md:flex-row gap-4 justify-center items-center md:gap-11 my-5 text-gray-300">
             <li><a class="hover:text-primary-color" href="#">Home</a></li>
